--- a/microservice-config/config/application.yml
+++ b/microservice-config/config/application.yml
@@ -4,3 +4,7 @@ eureka:
   client:
     service-url: 
       defaultZone: http://${eureka.instance.hostname}:8761/eureka/
+      
+      
+      
+lucky-word: value1
